--- a/src/app/index.css
+++ b/src/app/index.css
@@ -174,3 +174,6 @@ footer.page-footer {
     padding-left: 50px !important;
     padding-right: 50px !important;
 }
+.container {
+    width: 85%;
+}
