--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="nav-wrapper">
 
-            <a href="#/" class="brand-logo"><img src="assets/images/logo-mini.png" height="30px"/></a>
+            <a href="/#/" class="brand-logo"><img src="assets/images/logo-mini.png" height="30px"/></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="https://twitter.com/Qaobee"
                        target="_blank"
