#1 : correction des petites erreurs dans les mentions légales

--- a/src/app/public/legal.html
+++ b/src/app/public/legal.html
@@ -12,8 +12,8 @@
     <p>
         <strong>Propriétaire</strong> : Qaobee – SARL – 35 rue Jeanne Maistre 29200 BREST<br/> <strong>Créateur</strong>
         : <a href="www.qaobee.com">Qaobee</a><br/> <strong>Responsable
-        publication</strong> : Qaobee – contact@qaobee.com<br/> Le responsable publication est une personne physique ou
-        une personne morale.<br/> <strong>Webmaster</strong> : Qaobee – contact@qaobee.com<br/>
+        publication</strong> : Qaobee – contact@qaobee.com<br/> 
+        <strong>Webmaster</strong> : Qaobee – contact@qaobee.com<br/>
         <strong>Hébergeur</strong> : RedHat OpenShift https://www.openshift.com et Surge https://surge.sh/<br/>
     </p>
 
@@ -53,7 +53,7 @@
     </p>
 
     <p>
-        Tous les informations indiquées sur le site <a href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com">www.qaobee.com</a>
+        Toutes les informations indiquées sur le site <a href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com">www.qaobee.com</a>
         sont données à titre indicatif, et sont susceptibles d’évoluer. Par
         ailleurs, les renseignements figurant sur le site <a href="http://www.qaobee.com/"
                                                              title="Qaobee - www.qaobee.com">www.qaobee.com</a> ne sont
