--- a/src/app/public/home.html
+++ b/src/app/public/home.html
@@ -21,24 +21,33 @@
             <div class="row">
                 <div class="col s12 m4">
                     <div class="center icon-block">
-                        <a href="mailto:contact@qaobee.com"><h2 class="center red-text text-lighten-1"><i
-                                class="fa fa-envelope-square"></i></h2></a>
+                        <a href="mailto:contact@qaobee.com">
+                            <div class="red-text text-lighten-1">
+                                <i class="medium material-icons">email</i>
+                            </div>
+                        </a>
                         <h5 class="center" translate="landing.contact.email"></h5>
                     </div>
                 </div>
 
                 <div class="col s12 m4">
-                    <div class="icon-block">
-                        <a href="https://goo.gl/maps/3Fjoz" target="_blank"><h2 class="center red-text text-lighten-1">
-                            <i class="fa fa-map-marker"></i></h2></a>
+                    <div class="center icon-block">
+                        <a href="https://goo.gl/maps/3Fjoz" target="_blank">
+                            <div class="red-text text-lighten-1">
+                                <i class="medium material-icons">location_on</i>
+                            </div>
+                        </a>
                         <h5 class="center" translate="landing.contact.visit"></h5>
                     </div>
                 </div>
 
                 <div class="col s12 m4">
-                    <div class="icon-block">
-                        <a href="#modalSubMailingList" class="modal-trigger"><h2 class="center red-text text-lighten-1">
-                            <i class="fa fa-bell"></i></h2></a>
+                    <div class="center icon-block">
+                        <a href="#modalSubMailingList" class="modal-trigger">
+                            <div class="red-text text-lighten-1">
+                                <i class="medium material-icons">feedback</i>
+                            </div>
+                        </a>
                         <h5 class="center" translate="landing.contact.newsletter">/h5>
                     </div>
                 </div>
@@ -54,7 +63,7 @@
         <div class="section">
             <h4 class="center-align" translate="landing.area-2.title"></h4>
 
-            <p class="center-align" translate="landing.area-2.content"></p>
+            <h5 class="center-align" translate="landing.area-2.content"></h5>
         </div>
     </div>
 
@@ -62,23 +71,23 @@
         <div class="section row describe">
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="btn-floating btn-large blue lighten-2">
-                        <i class="fa fa-cogs fa-3x"></i>
+                    <div class="red-text text-lighten-1">
+                        <i class="medium material-icons">assessment</i>
                     </div>
-                    <h6 translate="landing.area-3.item-1.title"></h6>
+                    <h6 translate="landing.area-3.item-1.title" class="title"></h6>
 
-                    <p class="light justify small" translate="landing.area-3.item-1.content"></p>
+                    <p class="light left-align small" translate="landing.area-3.item-1.content"></p>
                 </div>
             </div>
 
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="btn-floating btn-large blue lighten-2">
-                        <i class="fa fa-bar-chart circle fa-3x"></i>
+                    <div class="red-text text-lighten-1">
+                        <i class="medium material-icons">store</i>
                     </div>
-                    <h6 translate="landing.area-3.item-2.title"></h6>
+                    <h6 translate="landing.area-3.item-2.title" class="title"></h6>
 
-                    <p class="light justify small" translate="landing.area-3.item-2.content"></p>
+                    <p class="light left-align small" translate="landing.area-3.item-2.content"></p>
                 </div>
             </div>
 
@@ -87,24 +96,24 @@
 
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="btn-floating btn-large blue lighten-2">
-                        <i class="fa fa-cloud-download fa-3x"></i>
+                    <div class="red-text text-lighten-1">
+                        <i class="medium material-icons">stay_current_landscape</i>
                     </div>
 
-                    <h6 translate="landing.area-3.item-0.title"></h6>
+                    <h6 translate="landing.area-3.item-0.title" class="title"></h6>
 
-                    <p class="light justify small" translate="landing.area-3.item-0.content"></p>
+                    <p class="light left-align small" translate="landing.area-3.item-0.content"></p>
                 </div>
             </div>
 
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="btn-floating btn-large blue lighten-2">
-                        <i class="fa fa-rocket fa-3x"></i>
+                    <div class="red-text text-lighten-1">
+                        <i class="medium material-icons">loop</i>
                     </div>
-                    <h6 translate="landing.area-3.item-3.title"></h6>
+                    <h6 translate="landing.area-3.item-3.title" class="title"></h6>
 
-                    <p class="light justify small" translate="landing.area-3.item-3.content"></p>
+                    <p class="light left-align small" translate="landing.area-3.item-3.content"></p>
                 </div>
             </div>
         </div>
@@ -119,7 +128,7 @@
         <div class="section">
             <h4 class="center-align" translate="landing.area-4.title"></h4>
 
-            <p class="center-align" translate="landing.area-4.content"></p>
+            <h5 class="center-align" translate="landing.area-4.content"></h5>
 
             <div class="row">
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
@@ -128,6 +137,10 @@
                 <img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="section">
         </div>
     </div>
     <!-- Modal -->
