--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -10,10 +10,10 @@
                        class="white-text"><i
                         class="fa fa-twitter-square fa-2x"></i></a></li>
             </ul>
-           <!-- <ul class="right hide-on-med-and-down">
+            <ul class="right hide-on-med-and-down">
                 <li><a href="#modalLogin" class="white-text modal-trigger"><i
                         class="fa fa-sign-in right"></i>{{'navbar.connect' | translate}}</a></li>
-            </ul>-->
+            </ul>
             <!--
                         <a href="#" data-activates="nav-mobileHC" class="button-collapse grey-text text-lighten-1"><i
                                 class="mdi-navigation-menu"></i></a>
