Private home page

--- a/src/app/prive/home/home.html
+++ b/src/app/prive/home/home.html
@@ -59,7 +59,7 @@
         <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.player' | translate }}</h5></div>
         <ul class="collection">
             <li class="collection-item avatar" ng-repeat="player in effective">
-              <img src="img/user.png" alt="" class="circle responsive-img">
+              <img src="assets/images/user.png" alt="" class="circle responsive-img">
               <span class="title blue-text text-lighten-1">{{player.firstname}} {{player.name}}</span>
               <p>{{player.positionType}}</p>
               <a href="#!" class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i class="fa fa-bar-chart"></i></a>
