--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -18,7 +18,7 @@
         <div><h5 class="header light-green-text text-lighten-1">{{'players.playerList.title' | translate }} {{currentCategory.label}}</h5></div>
         <ul class="collection">
             <li class="collection-item avatar" ng-repeat="player in effective">
-              <img src="img/user.png" alt="" class="circle responsive-img">
+              <img src="assets/images/user.png" alt="" class="circle responsive-img">
               <span class="title blue-text text-lighten-1">{{player.firstname}} {{player.name}} - {{player.positionType}}</span>
                 <p>{{player.age}} ans - {{player.status.height}} cm / {{player.status.weight}} kg
                     <br/>
