--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -14,7 +14,7 @@
                 <li><a href="#modalLogin" class="white-text modal-trigger"><i
                         class="fa fa-sign-in right"></i>{{'navbar.connect' | translate}}</a></li>
             </ul>
-            <!--
+            
                         <a href="#" data-activates="nav-mobileHC" class="button-collapse grey-text text-lighten-1"><i
                                 class="mdi-navigation-menu"></i></a>
 
@@ -26,7 +26,7 @@
                                   class="black-text"><i
                                    class="fa fa-twitter-square fa-2x"></i></a></li>
                         </ul>
-            -->
+            
                     </div>
                 </div>
             </nav>
@@ -75,7 +75,7 @@
                         {{'headerMenu.notification' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>
                         {{'headerMenu.stats' | translate }}</a></li>
-                    <li><a href="#/private/playerlist" class="white-text light"><span
+                    <li><a href="#/private/effective" class="white-text light"><span
                             class="mdi-social-people left"></span>
                         {{'headerMenu.effective' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="mdi-image-timer left"></i>
@@ -104,7 +104,7 @@
                     <li><a href="#/private/" class="light"><i class="fa fa-bar-chart left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.stats"></span></a>
                     </li>
-                    <li><a href="#/private/playerlist" class="light"><i class="mdi-social-people left"></i>
+                    <li><a href="#/private/effective" class="light"><i class="mdi-social-people left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.effective"></span></a>
                     </li>
                     <li><a href="#/private/" class="light"><i class="mdi-image-timer left"></i>
