--- a/src/app/components/widgets/event/nextEvent.html
+++ b/src/app/components/widgets/event/nextEvent.html
@@ -1,5 +1,5 @@
 <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-calendar left"></i>
-    {{'prive.dashboard.event' | translate }}</h5></div>
+    {{'dashboard.event' | translate }}</h5></div>
 
 <div>
     <div class="card small white">
