--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -12,7 +12,7 @@
         <br/>
         
         <!-- Collecte-->
-        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.stats' | translate }}</h5></div>
+        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats' | translate }}</h5></div>
         <div>
             <div class="card small">
                 <div class="card-image waves-effect waves-block waves-light">
@@ -38,7 +38,7 @@
     <!-- player list-->
     <div class="col s12 m6 l4">
         <!-- TOP 3 -->
-        <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'prive.dashboard.topplayer' | translate }}</h5></div>
+        <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'dashboard.topplayer' | translate }}</h5></div>
         <ul class="collapsible popout" data-collapsible="accordion">
             <li>
               <div class="collapsible-header tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}"><i class="fa fa-futbol-o"></i> {{user.firstname}} {{user.name}}</div>
@@ -56,7 +56,7 @@
         <br/>
         
         <!-- List Player -->
-        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.player' | translate }}</h5></div>
+        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player' | translate }}</h5></div>
         <ul class="collection">
             <li class="collection-item avatar" ng-repeat="player in effective">
               <img src="assets/images/user.png" alt="" class="circle responsive-img">
