--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="col s12">
         <!-- List Player -->
-        <div><h5 class="header light-green-text text-lighten-1">{{'players.playerList.title' | translate }} {{currentCategory.label}}</h5></div>
+        <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentCategory.label}}</h5></div>
         <ul class="collection">
             <li class="collection-item avatar" ng-repeat="player in effective">
               <img src="assets/images/user.png" alt="" class="circle responsive-img">
