--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col s12">
         <!-- Action bar players -->
-        <div><a class="btn-floating btn-small waves-effect waves-light red lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}"><i class="mdi-content-add"></i></a></div>
+        <div><a class="btn-floating btn-small waves-effect waves-light red lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}"><i class="mdi-content-add"></i></a></div>
     </div>
 </div>
     
