--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -1,34 +1,41 @@
 <div class="container">
-
-<!-- space between header menu and body-->
-<div class="row s12"></div>
-
 <!-- body start-->
-<div class="row">
-    <div class="col s12">
-        <!-- Action bar players -->
-        <div><a class="btn-floating btn-small waves-effect waves-light red lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}"><i class="mdi-content-add"></i></a></div>
+    <div class="row"> <div class="col s10"></div></div>   
+
+    <!-- action bar -->
+    <div class="row">
+        <div class="col s10">
+            <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentCategory.label}}</h5></div>
+        </div>
+        <div class="col s1">
+            <a class="btn-floating btn-large red tooltipped" data-position="down" data-delay="30" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}">
+                <i class="large material-icons">playlist_add</i>
+            </a>
+        </div>
+        <div class="col s1">
+            <a class="btn-floating btn-large blue tooltipped" data-position="down" data-delay="30" data-tooltip="{{'mainEffective.buttons.addPlayer' | translate }}">
+                <i class="large material-icons">person_add</i>
+            </a>
+        </div>
     </div>
-</div>
+
+    <!-- player list-->
+    <div class="row">
+        <div class="col s12">    
+            <ul class="collection">
+                <li class="collection-item avatar" ng-repeat="player in effective">
+                  <img src="assets/images/user.png" alt="" class="circle responsive-img">
+                  <span class="title blue-text text-lighten-1">{{player.firstname}} {{player.name}} - {{player.positionType}}</span>
+                    <p>{{player.age}} ans - {{player.status.height}} cm / {{player.status.weight}} kg
+                        <br/>
+                        {{player.stateForm}}
+                    </p>
+                  <a href="#!" class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i class="fa fa-bar-chart"></i></a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
     
-<!-- player list-->
-<div class="row">
-    <div class="col s12">
-        <!-- List Player -->
-        <div><h5 class="header light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentCategory.label}}</h5></div>
-        <ul class="collection">
-            <li class="collection-item avatar" ng-repeat="player in effective">
-              <img src="assets/images/user.png" alt="" class="circle responsive-img">
-              <span class="title blue-text text-lighten-1">{{player.firstname}} {{player.name}} - {{player.positionType}}</span>
-                <p>{{player.age}} ans - {{player.status.height}} cm / {{player.status.weight}} kg
-                    <br/>
-                    {{player.stateForm}}
-                </p>
-              <a href="#!" class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i class="fa fa-bar-chart"></i></a>
-            </li>
-        </ul>
-        
-    </div>
-</div>
 <!-- body end-->
 </div>
