--- a/src/app/modules/sandbox/effective/players/addPlayer.html
+++ b/src/app/modules/sandbox/effective/players/addPlayer.html
@@ -5,8 +5,200 @@
     <!-- action bar -->
     <div class="row">
         <div class="col s12">
-            <div><h5 class="header light-green-text text-lighten-1">{{'addPlayer.title' | translate }}</h5></div>
+            <div>
+                <h5 class="header light-green-text text-lighten-1">
+                    <i class="material-icons btn-floating white-text red lighten-1 center">person_add</i> {{'addPlayer.title' | translate }}</h5>
+            </div>
         </div>
+    </div>
+    
+    <div class="row">
+        <wizard on-finish="finishedWizard()" template="app/components/directives/wizard/wizard.html"> 
+            
+            <!-- step etat civil -->
+            <wz-step title="{{'addPlayer.labelsfield.playerCivilSection' | translate }}" template="app/components/directives/wizard/step.html">
+                <div class="row col s12"></div>
+                <form class="col s12" name="playerCivilSection">
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s3">
+                          <input ng-model="player.firstname" id="playerFirstname" type="text" class="validate">
+                          <label for="playerFirstname">{{'addPlayer.labelsfield.playerFirstname' | translate }}</label>
+                        </div>
+                        <div class="input-field col s3">
+                          <input ng-model="player.name" id="playerName" type="text" class="validate">
+                          <label for="playerName">{{'addPlayer.labelsfield.playerName' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <label>{{'addPlayer.labelsfield.playerGender' | translate }}</label>
+                            <p>&nbsp;</p>
+                            <p>
+                                <input name="gender" class="with-gap" type="radio" id="playerGenderF" ng-model="player.gender" />
+                                <label for="playerGenderF">{{'addPlayer.labelsfield.playerGenderF' | translate }}</label>
+                            </p>
+                            <p>
+                                <input name="gender" class="with-gap" type="radio" id="playerGenderM" ng-model="player.gender" />
+                                <label for="playerGenderM">{{'addPlayer.labelsfield.playerGenderM' | translate }}</label>
+                            </p>
+                        </div>
+                        <div class="input-field col s3">
+                            <label>{{'addPlayer.labelsfield.playerBirthdate' | translate }}</label>
+                            <p>&nbsp;</p>
+                            <p>
+                                <input ng-model="player.birthdate" id="playerBirthdate" type="date" class="validate">
+                            </p>
+                          
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s3">
+                          <input ng-model="player.nationality" id="playerNationality" type="text" class="validate">
+                          <label for="playerNationality">{{'addPlayer.labelsfield.playerNationality' | translate }}</label>
+                        </div>
+                        <div class="input-field col s3">
+                          <input ng-model="player.birthCity" id="playerBirthCity" type="text" class="validate">
+                          <label for="playerBirthCity">{{'addPlayer.labelsfield.playerBirthCity' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <!-- actions buttons -->
+                    <div class="row col s12">&nbsp;</div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="row col s6 center">
+                            <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'buttons.cancel' | translate }}</a>
+                            &nbsp;
+                            <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next">{{'buttons.next' | translate }}</button>
+                        </div>
+                        
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                </form>
+            </wz-step>
+            
+            <!-- step caracteristiques -->
+            <wz-step title="{{'addPlayer.labelsfield.playerCaracterSection' | translate }}" template="app/components/directives/wizard/step.html">
+                <div class="row col s12"></div>
+                <form class="col s12" name="playerCaracterSection">
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <input id="playerPositionType" type="text" class="validate" ng-model="player.status.positionType">
+                            <label for="playerPositionType">{{'addPlayer.labelsfield.playerPositionType' | translate }}</label>
+                        </div>
+                        <div class="input-field col s3">
+                            <input id="playerSquadNumber" type="number" class="validate" min="0" ng-model="player.squadnumber">
+                            <label for="playerSquadNumber">{{'addPlayer.labelsfield.playerSquadNumber' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <input id="playerWeight" type="number" class="validate" min="0" ng-model="player.status.weight" value="player.status.weight">
+                            <label for="playerWeight">{{'addPlayer.labelsfield.playerWeight' | translate }}</label>
+                        </div>
+                        <div class="input-field col s3">
+                            <input id="playerHeight" type="number" class="validate" min="0" ng-model="player.status.height">
+                            <label for="playerHeight">{{'addPlayer.labelsfield.playerHeight' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s3"><label>{{'addPlayer.labelsfield.playerLaterality' | translate }}</label></div>
+                        <div class="input-field col s3"> 
+                            <p>
+                                <input name="laterality" class="with-gap" type="radio" id="playerLateralityA" ng-model="player.status.laterality" />
+                                <label for="playerLateralityA">{{'addPlayer.labelsfield.playerLateralityA' | translate }}</label>
+                            </p>
+                            <p>
+                                <input name="laterality" class="with-gap" type="radio" id="playerLateralityL" ng-model="player.status.laterality" />
+                                <label for="playerLateralityL">{{'addPlayer.labelsfield.playerLateralityL' | translate }}</label>
+                            </p>
+                            <p>
+                               <input name="laterality" class="with-gap" type="radio" id="playerLateralityR" ng-model="player.status.laterality" checked/>
+                                <label for="playerLateralityR">{{'addPlayer.labelsfield.playerLateralityR' | translate }}</label>
+                            </p>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <!-- actions buttons -->
+                    <div class="row col s12">&nbsp;</div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="row col s6 center">
+                            <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'buttons.cancel' | translate }}</a>&nbsp;
+                            <button class="btn white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'buttons.previous' | translate }}</button>&nbsp;
+                            <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next">{{'buttons.next' | translate }}</button>
+                        </div>
+                        
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                </form>
+            </wz-step>
+            
+            <!-- step contact -->
+            <wz-step title="{{'addPlayer.labelsfield.playerContactSection' | translate }}" template="app/components/directives/wizard/step.html">
+                <div class="row col s12"></div>
+                <form class="col s12" name="playerContactSection">
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">mail</i>
+                            <input id="playerMail" type="email" class="validate" ng-model="player.contact.email">
+                            <label for="playerMail">{{'addPlayer.labelsfield.playerMail' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">phone</i>
+                            <input id="playerTelMobile" type="number" class="validate" min="0" ng-model="player.contact.home">
+                            <label for="playerTelHome">{{'addPlayer.labelsfield.playerTelHome' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                     <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">smartphone</i>
+                            <input id="playerTelMobile" type="number" class="validate" min="0" ng-model="player.contact.cellphone">
+                            <label for="playerTelMobile">{{'addPlayer.labelsfield.playerTelMobile' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                     <div class="row">
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">home</i>
+                            <input id="playerAddress" type="text" class="validate" min="0" ng-model="player.address.formatedAddress">
+                            <label for="playerAddress">{{'addPlayer.labelsfield.playerAddress' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    <!-- actions buttons -->
+                    <div class="row">
+                        <div class="row col s12">&nbsp;</div>
+                        <div class="row col s3">&nbsp;</div>
+                        <div class="row col s6 center">
+                            <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'buttons.cancel' | translate }}</a>&nbsp;
+                            <button class="btn white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'buttons.previous' | translate }}</button>&nbsp;
+                            <a wz-next="" class="btn white-text green darken-1">{{'buttons.validate' | translate }}</a>
+                        </div>
+                        
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                </form>
+            </wz-step>
+        </wizard>
     </div>
 
    
