--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -15,7 +15,7 @@
         </div>
         
         <div class="col s2">
-            <a class="dropdown-button red-text text-lighten-1" href="#!" data-activates="actionsEffective"><i class="material-icons right">mode_edit</i></a>
+            <a class="dropdown-button red-text text-lighten-1" href="#!" data-activates="actionsEffective"><i class="material-icons right">more_vert</i></a>
             
             <!-- Dropdown Structure -->
             <ul id="actionsEffective" class="dropdown-content">
