--- a/src/app/modules/sandbox/effective/players/addPlayer.html
+++ b/src/app/modules/sandbox/effective/players/addPlayer.html
@@ -123,7 +123,7 @@
                                 <label for="playerLateralityL">{{'addPlayer.labelsfield.playerLateralityL' | translate }}</label>
                             </p>
                             <p>
-                               <input name="laterality" class="with-gap" type="radio" id="playerLateralityR" ng-model="player.status.laterality" checked/>
+                               <input name="laterality" class="with-gap" type="radio" id="playerLateralityR" ng-model="player.status.laterality"/>
                                 <label for="playerLateralityR">{{'addPlayer.labelsfield.playerLateralityR' | translate }}</label>
                             </p>
                         </div>
@@ -175,12 +175,40 @@
                         </div>
                         <div class="row col s3">&nbsp;</div>
                     </div>
+                    
+                    
+                    <!-- 
                      <div class="row">
                         <div class="row col s3">&nbsp;</div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">home</i>
                             <input id="playerAddress" type="text" class="validate" min="0" ng-model="player.address.formatedAddress">
                             <label for="playerAddress">{{'addPlayer.labelsfield.playerAddress' | translate }}</label>
+                        </div>
+                        <div class="row col s3">&nbsp;</div>
+                    </div>
+                    -->
+                    <div class="row">
+                        <div class="row col s3"></div>
+                        <div class="input-field col s1">
+                            <i class="material-icons prefix">home</i>
+                        </div>
+                        <div class="input-field col s5">
+                            <ui-select ng-model="address.selected"
+                                     theme="selectize"
+                                     ng-disabled="disabled"
+                                     reset-search-input="false">
+                            
+                            <ui-select-choices repeat="address in addresses track by $index"
+                                     refresh="refreshAddresses($select.search)"
+                                     refresh-delay="0">
+                              <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
+                            </ui-select-choices>
+                            <ui-select-match placeholder="{{'addPlayer.labelsfield.playerAddress' | translate }}">
+                               {{$select.selected.formatted_address}}
+                            </ui-select-match> 
+                          </ui-select>
+                           
                         </div>
                         <div class="row col s3">&nbsp;</div>
                     </div>
